Fixed cut off logo & header sizes

--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ details {
     }
 
     .durango-comedy-logo {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
     .fb-logo {
